--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1">
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>12</td>
+				<td>srinija</td>
+			</tr>
+			<tr>
+				<td>13</td>
+				<td>sai sudha</td>
+			</tr>
+			<tr>
+				<td>14</td>
+				<td>sirisha</td>
+			</tr>
+		</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="iamge">
+		</li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+			
+		</li>
+		<li>
+			<audio autoplay src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls></audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
